--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "url": ""
   },
   "homepage": "",
-  "devDependencies": {
+  "dependencies": {
+    "babel-register": "^6.23.0",
+    "express": "^4.14.1",
+    "nightmare": "^2.9.1",
     "babel-cli": "^6.22.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
@@ -28,10 +31,5 @@
     "body-parser": "^1.16.0",
     "dotenv": "^4.0.0",
     "mongoose": "^4.8.1"
-  },
-  "dependencies": {
-    "babel-register": "^6.23.0",
-    "express": "^4.14.1",
-    "nightmare": "^2.9.1"
   }
 }
