--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "apt-get update && apt-get install -y libgtk2.0-0 libgconf-2-4 libasound2 libxtst6 libxss1 libnss3 xvfb",
-    "start": "xvfb-run -a node bin/dev",
+    "start": "node bin/dev",
     "clean": "rm -rf dist",
-    "build": "npm run clean && mkdir dist && babel server -s -d dist",
+    "build": "babel server -d dist -w -s",
     "production": "npm run build && node bin/production"
+  },
+  "babel":{
+    "presets":["es2015"]
   },
   "repository": {
     "type": "git",
@@ -22,15 +24,18 @@
   },
   "homepage": "",
   "dependencies": {
-    "babel-register": "^6.23.0",
-    "express": "^4.14.1",
-    "nightmare": "^2.9.1",
     "babel-cli": "^6.22.2",
+    "babel-core": "^6.23.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.23.0",
     "body-parser": "^1.16.0",
     "dotenv": "^4.0.0",
-    "mongoose": "^4.8.1"
+    "express": "^4.14.1",
+    "mongoose": "^4.8.1",
+    "nightmare": "^2.9.1"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.22.0"
   }
 }
