--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "babel server -d dist -w -s",
     "production": "npm run build && node bin/production"
   },
-  "babel":{
-    "presets":["es2015"]
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   },
   "repository": {
     "type": "git",
@@ -33,7 +35,8 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "mongoose": "^4.8.1",
-    "nightmare": "^2.9.1"
+    "nightmare": "^2.9.1",
+    "pryjs": "^1.0.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0"
